fix many logic
