# src/app/rest/docs/swagger.json
@@ -49,18 +49,6 @@
             "$ref": "#/components/responses/Fixtures"
           }
         }
-      },
-      "post": {
-        "description": "Create fixtures listing data",
-        "tags": ["Fixtures"],
-        "responses": {
-          "200": {
-            "$ref": "#/components/responses/Fixtures"
-          }
-        },
-        "requestBody": {
-          "$ref": "#/components/requestBodies/FixturesCreate"
-        }
       }
     },
     "/fixtures/calendar": {
@@ -83,25 +71,29 @@
         }
       }
     },
-    "/fixtures/{id_fixtures}": {
-      "delete": {
-        "description": "Update fixtures listing data",
-        "tags": ["Fixtures"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id_fixtures",
-            "required": true,
-            "schema": { "type": "string" }
-          }
-        ],
-        "responses": {
-          "200": {}
-        }
-      },
-      "put": {
+    "/admin/fixtures": {
+      "post": {
         "description": "Create fixtures listing data",
-        "tags": ["Fixtures"],
+        "tags": ["Fixtures Admin"],
+        "security": [{ "basicAuth": [] }],
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/Fixture"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          }
+        },
+        "requestBody": {
+          "$ref": "#/components/requestBodies/FixturesCreate"
+        }
+      }
+    },
+    "/admin/fixtures/{id_fixtures}": {
+      "get": {
+        "description": "Create fixtures listing data",
+        "tags": ["Fixtures Admin"],
+        "security": [{ "basicAuth": [] }],
         "parameters": [
           {
             "in": "path",
@@ -112,16 +104,200 @@
         ],
         "responses": {
           "200": {
-            "$ref": "#/components/responses/Fixtures"
+            "$ref": "#/components/responses/Fixture"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          }
+        }
+      },
+      "delete": {
+        "description": "Update fixtures listing data",
+        "tags": ["Fixtures Admin"],
+        "security": [{ "basicAuth": [] }],
+        "responses": {
+          "202": {
+            "description": "no content"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          }
+        },
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id_fixtures",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ]
+      },
+      "put": {
+        "description": "Create fixtures listing data",
+        "tags": ["Fixtures Admin"],
+        "security": [{ "basicAuth": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id_fixtures",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/Fixture"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
           }
         },
         "requestBody": {
           "$ref": "#/components/requestBodies/FixturesCreate"
         }
       }
+    },
+    "/admin/fixtures/{id_fixtures}/teams": {
+      "get": {
+        "description": "Create fixtures listing data",
+        "tags": ["Fixtures Detail Admin"],
+        "security": [{ "basicAuth": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id_fixtures",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/FixtureDetails"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          }
+        }
+      },
+      "post": {
+        "description": "Create fixtures listing data",
+        "tags": ["Fixtures Detail Admin"],
+        "security": [{ "basicAuth": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id_fixtures",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/FixtureDetailDetails"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          }
+        },
+        "requestBody": {
+          "$ref": "#/components/requestBodies/FixturesDetailCreate"
+        }
+      }
+    },
+    "/admin/fixtures/{id_fixtures}/teams/{id_team}": {
+      "get": {
+        "description": "Create fixtures listing data",
+        "tags": ["Fixtures Detail Admin"],
+        "security": [{ "basicAuth": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id_fixtures",
+            "required": true,
+            "schema": { "type": "string" }
+          },
+          {
+            "in": "path",
+            "name": "id_details",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/FixtureDetailDetails"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          }
+        }
+      },
+      "delete": {
+        "description": "Update fixtures listing data",
+        "tags": ["Fixtures Detail Admin"],
+        "security": [{ "basicAuth": [] }],
+        "responses": {
+          "202": {
+            "description": "no content"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          }
+        },
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id_fixtures",
+            "required": true,
+            "schema": { "type": "string" }
+          },
+          {
+            "in": "path",
+            "name": "id_details",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ]
+      },
+      "put": {
+        "description": "Create fixtures listing data",
+        "tags": ["Fixtures Detail Admin"],
+        "security": [{ "basicAuth": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id_fixtures",
+            "required": true,
+            "schema": { "type": "string" }
+          },
+          {
+            "in": "path",
+            "name": "id_details",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/FixtureDetailDetails"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          }
+        },
+        "requestBody": {
+          "$ref": "#/components/requestBodies/FixturesDetailCreate"
+        }
+      }
     }
   },
   "components": {
+    "securitySchemes": {
+      "basicAuth": {
+        "type": "http",
+        "scheme": "basic"
+      }
+    },
     "responses": {
       "Message": {
         "description": "Content",
@@ -129,6 +305,26 @@
           "application/json": {
             "schema": {
               "$ref": "#/components/schemas/Message"
+            }
+          }
+        }
+      },
+      "UnauthorizedError": {
+        "description": "Content",
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/UnauthorizedErrorMessage"
+            }
+          }
+        }
+      },
+      "Fixture": {
+        "description": "Content",
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/FixturesRequestBody"
             }
           }
         }
@@ -152,6 +348,39 @@
             }
           }
         }
+      },
+      "FixtureDetail": {
+        "description": "Content",
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/FixturesDetailsRequestBody"
+            }
+          }
+        }
+      },
+      "FixtureDetails": {
+        "description": "Content",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/components/schemas/FixturesDetailsRequestBody"
+              }
+            }
+          }
+        }
+      },
+      "FixtureDetailDetails": {
+        "description": "Content",
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/FixturesDetailsRequestBody"
+            }
+          }
+        }
       }
     },
     "requestBodies": {
@@ -164,10 +393,28 @@
             }
           }
         }
+      },
+      "FixturesDetailCreate": {
+        "description": "Fixtures request",
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/FixturesDetailsRequestBody"
+            }
+          }
+        }
       }
     },
     "schemas": {
       "Message": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string"
+          }
+        }
+      },
+      "UnauthorizedErrorMessage": {
         "type": "object",
         "properties": {
           "message": {
@@ -239,6 +486,9 @@
           },
           "code": {
             "type": "string"
+          },
+          "team_logo": {
+            "type": "string"
           }
         }
       },
@@ -287,10 +537,50 @@
           "tournament_name": {
             "type": "string"
           },
-          "match_status": {
+          "match_datetime": {
+            "type": "string"
+          }
+        }
+      },
+      "FixturesDetails": {
+        "type": "object",
+        "properties": {
+          "id": {
             "type": "string"
           },
-          "date": {
+          "name": {
+            "type": "string"
+          },
+          "code": {
+            "type": "string"
+          },
+          "score": {
+            "type": "integer"
+          },
+          "team_side": {
+            "type": "string"
+          },
+          "team_logo": {
+            "type": "string"
+          }
+        }
+      },
+      "FixturesDetailsRequestBody": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "code": {
+            "type": "string"
+          },
+          "score": {
+            "type": "integer"
+          },
+          "team_side": {
+            "type": "string"
+          },
+          "team_logo": {
             "type": "string"
           }
         }
