# src/infrastructure/sql/teams/sql/teams.sql.provider.ts
@@ -20,72 +20,38 @@ export default class TeamsSQLProvider {
     return data;
   }
 
-  async getAll(
-    _context: Context,
-    param?: Param<TeamsQueryParam>
-  ): Promise<Paginated<Teams>> {
-    let fixturesDB = this.fixturesDB().select(
-      `${tables.INDEX_TABLE_TEAMS}.id`,
-      `${tables.INDEX_TABLE_TEAMS}.name`,
-      `${tables.INDEX_TABLE_TEAMS}.code`,
-      `${tables.INDEX_TABLE_TEAMS}.score`,
-      `${tables.INDEX_TABLE_TEAMS}.team_side`,
-      `${tables.INDEX_TABLE_TEAMS}.fixture_id`
-    );
-
-    fixturesDB =
-      (param &&
-        param.search &&
-        param.search.searchBy &&
-        fixturesDB.where(
-          `${tables.INDEX_TABLE_TEAMS}.${param.search.searchBy}`,
-          param.search.search
-        )) ||
-      fixturesDB;
-    fixturesDB =
-      (param &&
-        param.search &&
-        param.search.sortBy &&
-        fixturesDB.orderBy(
-          `${tables.INDEX_TABLE_TEAMS}.${param.search.sortBy}`,
-          param.search.sortOrder
-        )) ||
-      fixturesDB;
-
-    const t = await fixturesDB
-      .clone()
-      .clearSelect()
-      .count<Record<string, number>>(`${tables.INDEX_TABLE_TEAMS}.id as count`);
-
-    const page = (param && param.pagination && param.pagination.page) || 1;
-    const size = (param && param.pagination && param.pagination.size) || 10;
-    fixturesDB = fixturesDB.limit(size).offset((page - 1) * size);
+  async getAll(_context: Context, fixture_id: string): Promise<Teams[]> {
+    let fixturesDB = this.fixturesDB()
+      .select(
+        `${tables.INDEX_TABLE_TEAMS}.id`,
+        `${tables.INDEX_TABLE_TEAMS}.name`,
+        `${tables.INDEX_TABLE_TEAMS}.code`,
+        `${tables.INDEX_TABLE_TEAMS}.score`,
+        `${tables.INDEX_TABLE_TEAMS}.team_side`,
+        `${tables.INDEX_TABLE_TEAMS}.team_logo`,
+        `${tables.INDEX_TABLE_TEAMS}.fixture_id`
+      )
+      .where(`${tables.INDEX_TABLE_TEAMS}.fixture_id`, fixture_id);
 
     const fixtures = await fixturesDB;
-
-    const total_size: number = t[0];
+    
     if (!fixtures) throw NotFoundError('Fixtures details not found');
     const data: Teams[] = await Promise.all(fixtures);
-    return {
-      pagination: {
-        page,
-        size,
-        total_size,
-        total_page: Math.ceil(total_size / size),
-      },
-      data,
-    };
+    return data;
   }
 
-  async get(_context: Context, id: string): Promise<Teams> {
-    let fixturesDB = this.fixturesDB().select(
-      `${tables.INDEX_TABLE_TEAMS}.id`,
-      `${tables.INDEX_TABLE_TEAMS}.name`,
-      `${tables.INDEX_TABLE_TEAMS}.code`,
-      `${tables.INDEX_TABLE_TEAMS}.score`,
-      `${tables.INDEX_TABLE_TEAMS}.team_side`,
-      `${tables.INDEX_TABLE_TEAMS}.fixture_id`
-    );
+  async get(_context: Context, fixture_id: string, id: string): Promise<Teams> {
+    let fixturesDB = this.fixturesDB()
+      .select(
+        `${tables.INDEX_TABLE_TEAMS}.id`,
+        `${tables.INDEX_TABLE_TEAMS}.name`,
+        `${tables.INDEX_TABLE_TEAMS}.code`,
+        `${tables.INDEX_TABLE_TEAMS}.score`,
+        `${tables.INDEX_TABLE_TEAMS}.team_side`,
+        `${tables.INDEX_TABLE_TEAMS}.team_logo`,
+        `${tables.INDEX_TABLE_TEAMS}.fixture_id`
+      )
+      .where(`${tables.INDEX_TABLE_TEAMS}.fixture_id`, fixture_id);
 
     const [fixtures] = await fixturesDB.where(
       `${tables.INDEX_TABLE_TEAMS}.id`,
@@ -106,24 +72,40 @@ export default class TeamsSQLProvider {
       `${tables.INDEX_TABLE_TEAMS}.name`,
       `${tables.INDEX_TABLE_TEAMS}.code`,
       `${tables.INDEX_TABLE_TEAMS}.score`,
+      `${tables.INDEX_TABLE_TEAMS}.team_logo`
     );
 
     const [fixtures] = await fixturesDB
       .where(`${tables.INDEX_TABLE_TEAMS}.fixture_id`, fixture_id)
       .where(`${tables.INDEX_TABLE_TEAMS}.team_side`, team_side);
 
-    if (!fixtures) throw NotFoundError('Fixtures details not found');
+    if (!fixtures) {
+      throw NotFoundError('Fixtures details not found');
+    }
     return fixtures;
   }
 
-  async update(_context: Context, id: string, data: Teams): Promise<Teams> {
+  async update(
+    _context: Context,
+    fixture_id: string,
+    id: string,
+    data: Teams
+  ): Promise<Teams> {
     await this.fixturesDB()
       .update({ ...data })
-      .where({ id });
+      .where(`${tables.INDEX_TABLE_TEAMS}.id`, id)
+      .where(`${tables.INDEX_TABLE_TEAMS}.fixture_id`, fixture_id);
     return data;
   }
 
-  async delete(_context: Context, id: string): Promise<void> {
-    await this.fixturesDB().delete().where({ id });
+  async delete(
+    _context: Context,
+    fixture_id: string,
+    id: string
+  ): Promise<void> {
+    await this.fixturesDB()
+      .delete()
+      .where(`${tables.INDEX_TABLE_TEAMS}.id`, id)
+      .where(`${tables.INDEX_TABLE_TEAMS}.fixture_id`, fixture_id);
   }
 }
